Correct the position of some fields in the options page
and make some fields larger to improve readability.

--- a/css/options.css
+++ b/css/options.css
@@ -16,6 +16,10 @@ fieldset legend {
   font-weight: bold;
 }
 
+fieldset br {
+  clear: both;
+}
+
 #main_area label {
   float: left;
   width: 230px;
@@ -28,7 +32,7 @@ fieldset legend {
 
 #main_area input[type="text"], #main_area input[type="password"], #main_area select {
   border: 1px solid #b4cff2;
-  width: 140px;
+  width: 20em;
 }
 
 #main_area span.error {
