--- a/css/base.css
+++ b/css/base.css
@@ -235,6 +235,13 @@ input[type='text'] {
   padding: 2px 22px 0px 4px;
 }
 
+.tweet .emoji {
+  height: 1em;
+  width: 1em;
+  margin: 0 .05em 0 .1em;
+  vertical-align: -0.1em;
+}
+
 .tweet_overlay {
   width: 100%;
   margin-top: -2px;
