--- a/css/options.css
+++ b/css/options.css
@@ -16,6 +16,10 @@ fieldset legend {
   font-weight: bold;
 }
 
+h1 {
+  text-align: center;
+}
+
 #main_area label {
   float: left;
   width: 230px;
